# DinoGame

./: README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: installation.yml
Dino Game/: Authentication.txt  Dyno.py
docs/: common.md  contributing.md  dino_game.md  index.md  installation.md  usage.md
